# tx-indexer

./: .codespellrc  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  TODOs  perf.data
.github/workflows/: btsim-ci.yml  ci.yml
btsim/: .gitignore  Cargo.toml  config.toml.example  cospend.toml.example  dense_large.toml  dense_small.toml  notes.txt
btsim/mppj/: results.json
btsim/src/: actions.rs  alloc_probe.rs  blocks.rs  bulletin_board.rs  coin_selection.rs  config.rs  correctness.rs  cospend.rs  counts.rs  denominate.rs  economic_graph.rs  graphviz.rs  lib.rs  lower_bound_metric.rs  macros.rs  main.rs  message.rs  metrics.rs  plan_tree.rs  script_type.rs  subset_sum.rs  transaction.rs  tx_contruction.rs  wallet.rs
contrib/: bench.sh  lint.sh  test.sh
docs/: datalayout.md  id_families.md  id_system.md
examples/: indexer.rs
src/: lib.rs
src/crates/block-index/: Cargo.toml
src/crates/block-index/src/: error.rs  lib.rs  varint.rs
src/crates/disjoint-set/: Cargo.toml
src/crates/disjoint-set/src/: lib.rs
src/crates/fingerprints/: README.md
src/crates/fingerprints/src/: tests.rs  types.rs
src/crates/fingerprints/src/fingerprints/: input.rs  input_with_prevout.rs  transaction.rs
src/crates/heuristics/: Cargo.toml
src/crates/heuristics/src/: change_identification.rs  coinjoin_detection.rs  common_input.rs  lib.rs  pass.rs  same_address.rs  uih.rs
src/crates/heuristics/src/ast/: change.rs  coinjoin.rs  common_input.rs  fingerprint.rs  fingerprints.rs  mod.rs  rbf.rs  same_address.rs  tests.rs  uih.rs
src/crates/partitions/: Cargo.toml
src/crates/partitions/src/: lib.rs
src/crates/partitions/src/radix/: analysis.rs  denoms.rs  mod.rs
src/crates/pipeline/: Cargo.toml
src/crates/pipeline/src/: context.rs  engine.rs  expr.rs  lib.rs  node.rs  placeholder.rs  storage.rs  value.rs
src/crates/pipeline/src/ops/: bitwise.rs  filter.rs  mod.rs  negate.rs  set_ops.rs  source.rs
src/crates/primitives/: Cargo.toml
src/crates/primitives/benches/: dense_parser.rs  parser.rs
src/crates/primitives/fixtures/multiple_block_files/: README.md
src/crates/primitives/fixtures/multiple_block_files/blocks/index/: LOG
src/crates/primitives/src/: abstract_fingerprints.rs  abstract_id.rs  abstract_types.rs  blk_file.rs  datalog.rs  disjoint_set.rs  graph_index.rs  hamming_weight.rs  handle.rs  indecies.rs  indices.rs  lib.rs  loose.rs  output_type.rs  parser.rs  pass.rs  storage.rs  tests.rs
src/crates/primitives/src/confirmed/: mod.rs
src/crates/primitives/src/dense/: handle.rs  mod.rs  parser.rs  sink.rs  storage.rs  tests.rs
src/crates/primitives/src/integration/: mod.rs  node_harness.rs
src/crates/primitives/src/loose/: confirmed_tx.rs  handle.rs  mod.rs  sink.rs  storage.rs
src/crates/primitives/src/sled/: db.rs  mod.rs  spk_db.rs
src/crates/primitives/src/test_utils/: mod.rs
src/crates/primitives/src/traits/: abstract_fingerprints.rs  abstract_types.rs  graph_index.rs  index_sink.rs  mod.rs  storage.rs
src/crates/primitives/src/unified/: handle.rs  id.rs  mod.rs  storage.rs
src/crates/storage/: Cargo.toml
src/crates/storage/src/: db.rs  lib.rs  spk_db.rs
