[package]
name = "tx-indexer-heuristics"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
tx-indexer-primitives = { path = "../primitives" }
tx-indexer-pipeline = { path = "../pipeline" }
tx-indexer-disjoint-set = { path = "../disjoint-set" }

[dev-dependencies]
rand = "0.8.5"
bitcoin-test-data = "0.2.0"
tx-indexer-primitives = { path = "../primitives", features = ["test-utils"] }
anyhow = "1.0"
